# kwtypr

./: Cargo.toml  LICENSE  README.md  justfile
src/: lib.rs  main.rs  typing.rs  wayland.rs  xkb.rs
src/wayland/: keyboard.rs  registry.rs
src/xkb/: mapping.rs  modifier.rs  unicode_fallback.rs
