[package]
name = "kwtypr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rustix = { version = "1.1.4", features = ["event"] }
thiserror = "2.0.18"
wayland-client = "0.31.13"
wayland-protocols-plasma = { version = "0.3.11", features = ["client"] }
xkbcommon = "0.9.0"
